--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
               <div class="botões">
 
                 <button class="botão">criar projetos</button>
-                <button class="botão">criar projetos</button>
-                <button class="botão">criar projetos</button>
+                <button class="botão">Estudar JavaScript</button>
+                <button class="botão"></button>
                 <button class="botão">criar projetos</button>
 
 
