--- a/index.html
+++ b/index.html
@@ -2,23 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meus Objetivos Do Ano</title>
+    <title>Meus objetivos do ano</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-      <section class="conteudo principal">
+    <section class="conteudo-principal">
+        <h2 class="titulo-principal">Meus objetivos do ano</h2>
+        <div class="botoes">
+            <button class="botao">O Gabigol</button>
+            <button class="botao">Tem</button>
+            <button class="botao">Vergonha</button>
+            <button class="botao">do 🦃</button>
+        </div>
 
-            <h2 class="titulo-principal">Meus objetivo></h2>
-
-              <div class="botões">
-
-                <button class="botão">criar projetos</button>
-                <button class="botão">Estudar JavaScript</button>
-                <button class="botão"></button>
-                <button class="botão">criar projetos</button>
-
-
-      </section>
+    </section>
+    <script src="main.js"></script>
 </body>
 </html>
