--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano</h2>
         <div class="botoes">
-            <button class="botao">O Gabigol</button>
-            <button class="botao">Tem</button>
-            <button class="botao">Vergonha</button>
-            <button class="botao">do 🦃</button>
+            <button class="botao">Gabriel</button>
+            <button class="botao">Nao</button>
+            <button class="botao">e</button>
+            <button class="botao">homem</button>
         </div>
 
     </section>
