--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,53 +8,62 @@
     <title>Meus objetivos do ano</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus objetivos do ano <span>_</span></h2>
-        <div class="botoes">
-            <button class="botao">Aulas e mentoria</button>
-            <button class="botao">Taticas e movimentos</button>
-            <button class="botao">Raquetes, saiba qual faz seu estilo de jogo</button>
-            <button class="botao">Nossas redes sociais</button>
-        </div>
-        <div class = "abas-textos">
-             <div class = "aba-conteudo">
-                <h2 class = "aba-conteudo-titulo-principal">
-                    Aqui você aprenderá tudo sobre o beach
-                </h2>
-                <h3 class = "aba-conteudo-titulo-secundario">
-                    TEMPO DAS AULAS 
-                </h3>
+        <div class="conteudo">
+            <div class="botoes">
+                <button class="botao">Aulas e mentoria</button>
+                <button class="botao">Taticas e movimentos</button>
+                <button class="botao">Raquetes, saiba qual faz seu estilo de jogo</button>
+                <button class="botao">Nossas redes sociais</button>
             </div>
-            <div class = "abas-textos">
-                <div class = "aba-conteudo">
-                   <h2 class = "aba-conteudo-titulo-principal">
-                       Aprenda aqui o seu movimento dos sonhos
-                   </h2>
-                   <h3 class = "aba-conteudo-titulo-secundario">
-                      QUAL VOCÊ GOSTOU MAIS?
-                   </h3>
-               </div>
-               <div class = "abas-textos">
-                <div class = "aba-conteudo">
-                   <h2 class = "aba-conteudo-titulo-principal">
-                       
-                   </h2>
-                   <h3 class = "aba-conteudo-titulo-secundario">
-                       TEMPO PARA CONCLUIR O OBJETIVO
-                   </h3>
-               </div>
-               <div class = "abas-textos">
-                <div class = "aba-conteudo">
-                   <h2 class = "aba-conteudo-titulo-principal">
-                       Fazer cursos de outras linguagens
-                   </h2>
-                   <h3 class = "aba-conteudo-titulo-secundario">
-                       TEMPO PARA CONCLUIR O OBJETIVO
-                   </h3>
-               </div>
-         </div>
+            <div class="abas-textos">
+                <div class="aba-conteudo">
+
+                    <h2 class="aba-conteudo-titulo-principal">
+                        Aqui você aprenderá tudo sobre o beach
+                    </h2>
+                    <h3 class="aba-conteudo-titulo-secundario">
+                        TEMPO DAS AULAS
+                    </h3>
+                    <div class="contador"></div>
+                </div>
+                <div class="abas-textos">
+                    <div class="aba-conteudo">
+                        <h2 class="aba-conteudo-titulo-principal">
+                            Aprenda aqui o seu movimento dos sonhos
+                        </h2>
+                        <h3 class="aba-conteudo-titulo-secundario">
+                            QUAL VOCÊ GOSTOU MAIS?
+                        </h3>
+                        <div class="contador"></div>
+                    </div>
+                    <div class="abas-textos">
+                        <div class="aba-conteudo">
+                            <h2 class="aba-conteudo-titulo-principal">
+                                ESTILO DE RAQUETES PESOS, BALANCE
+                            </h2>
+                            <h3 class="aba-conteudo-titulo-secundario">
+                                RAQUETES:
+                            </h3>
+                            <div class="contador"></div>
+                        </div>
+                        <div class="abas-textos">
+                            <div class="aba-conteudo">
+                                <h2 class="aba-conteudo-titulo-principal">
+                                    INSTAGRAM & YOTUBE
+                                </h2>
+                                <h3 class="aba-conteudo-titulo-secundario">
+                                    REDES:
+                                </h3>
+                                <div class="contador"></div>
+                            </div>
+                        </div>
+                    </div>
     </section>
     <script src="main.js"></script>
 </body>
+
 </html>
