--- a/index.html
+++ b/index.html
@@ -25,9 +25,49 @@
                     <h2 class="aba-conteudo-titulo-principal">
                         Aqui você aprenderá tudo sobre o beach
                     </h2>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
                     <h3 class="aba-conteudo-titulo-secundario">
                         TEMPO DAS AULAS
                     </h3>
+                    <div class="contador">
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                        <div class="contador-digito">
+                            <div class="contador-digito-numero"></div>
+                            <div class="contador-digito-texto"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="aba-conteudo">
                     <div class="contador"></div>
                 </div>
                 <div class="abas-textos">
